zomato web page

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="img/logo.png" alt="Zomato Logo">
+                <img src="/Project 1/img/logo.png" alt="Zomato Logo">
             </div>
             <nav>
                 <ul>
